[package]
name = "fragment-android"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>", "Lars Jarlvik <lars.jarlvik@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.11"
pollster = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4.14"
ndk = "0.3"
ndk-glue = { version = "0.3", features = ["logger"] }
android_logger = "0.10.1"

# NEW!
[build-dependencies]
glob = "0.3"
fs_extra = "1.2"
anyhow = "1.0"

[[bin]]
name = "fragmen-android"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]